styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Fraunces&display=swap');


:root {
    /* Primary */
    --dark-cyan: hsl(158, 36%, 37%);
    --cream: hsl(30, 38%, 92%);

    /* Neutral */
    --very-dark-blue: hsl(212, 21%, 14%);
    --dark-grayish-blue: hsl(228, 12%, 48%);
    --white: hsl(0, 0%, 100%);
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
}

body {
    min-height: 100vh;
    font-size: 15px;
    background-color: var(--cream);
}

.flex {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.flex-column {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

main {
    min-height: 100vh;
    flex-wrap: wrap;
}

.container {
    margin: 1rem 2rem;
    border-radius: 10px;
    max-width: 600px;
    /* width: 40%; */
    height: auto;
    overflow: hidden;
    box-shadow: var(--dark-grayish-blue) 0px 5px 14px;
}

.perfume-details, .perfume-image {
    flex: 50%;
}

.perfume-image {
    width: 250px;
    /* width: 100%; */
    height: auto;
    object-fit: cover;
}

.perfume-image > img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}


@media screen and (max-width: 768px) {
    
    .perfume-details, .perfume-image {
        flex: 100%;
    }
    
}

.perfume-details {
    background-color: var(--white);
    align-items: flex-start;
    padding: 1.2rem;
    justify-content: space-evenly;
    gap: 1rem;
}

.cart-btn {
    width: 100%;
    border: 1px solid var(--dark-cyan);
    background-color: var(--dark-cyan);
    padding: 0.5rem;
    color: var(--white);
    border-radius: 5px;
    justify-content: center;
    align-items: center;
}

.cart-btn:hover {
    background-color: var(--very-dark-blue);
    border-color: var(--very-dark-blue);
    cursor: pointer;
}

.cart-btn::before {
    content: url('./images/icon-cart.svg');
    margin-right: 7px;
}

.bold {
    font-family: 'Fraunces';
    font-weight: 1000;
}

.price {
    color: var(--dark-cyan);
    font-size: 25px;
}

.original-price {
    color: var(--dark-grayish-blue);
    font-size: 16px;
    font-weight: 700;
    /* text-decoration: line-through; */
    align-self: center;
    margin-left: 1.5rem;
}

.attribution {
    font-size: 16px;
    text-align: center;
}

.attribution a {
    color: hsl(228, 45%, 44%);
}

